2002-05-04  Jody Goldberg <jody@gnome.org>

	* src/gnumeric-simple-canvas.c (gnm_simple_canvas_grab) : fix.

2002-05-02  Jody Goldberg <jody@gnome.org>
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=79925
 	* src/sheet-control-gui.c (scg_colrow_select) : flag failures to
 	  initiate a selection
 	* src/item-bar.c (item_bar_event) : only grab if the selection is
 	  successful.
 
2002-05-04  Almer S. Tigelaar  <almer@gnome.org>

	* src/sheet.c (sheet_clone_colrow_info_item): Correct typo s/src/info.

2002-05-01  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/print.c (compute_sheet_pages) : don't overwrite number of
	  pages from previous sheets.

2002-04-29  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=77682
	* src/gnumeric-pane.c (gnumeric_pane_header_init) : set a
	  non-contraining scrollregion here in case something scrolls before we
	  are realized and a real region is assigned.

2002-04-29  Jody Goldberg <jody@gnome.org>

	* src/item-cursor.c : remove the flushes in here.

	* src/gnumeric-simple-canvas.c (gnm_simple_canvas_ungrab) : add a
	  flush here.
	(gnm_simple_canvas_grab) : and here so that long running events change
	  grab state immediately.

2002-04-29  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=80134
	* src/sheet.c (sheet_duplicate) : clone freeze status too.
	(sheet_clone_colrow_info_item) : simplify and use colrow_copy.

2002-04-14  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2002-04-13  Jody Goldberg <jody@gnome.org>

	* Release 1.0.6

2002-04-12  Jody Goldberg <jody@gnome.org>

	* src/func.c (copy_hash_table_to_ptr_array) : back port the plugin doc
	  dumping operation.
	* src/main.c (main) : ditto.

	* src/sheet-control-gui.c (scg_object_update_bbox) : back port fix.

	* src/main.c (handle_paint_events) : disable warning for old versions.

2002-04-12  Jon K Hellan  <hellan@acm.org>

	* plugins/Makefile.am (SUBDIRS_FILE_FORMATS): Plan Perfect plugin